--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Platform Edukasi Pengelompokan Sampah</h1>
     <p>Masukkan nama Anda:</p>
     <input type="text" id="nama">
-    <p>Kamu mau buang sampah apa?</p>
+    <p>Anda ingin membuang sampah apa?</p>
     <select id="jenisSampah">
         <option value="organik">Dedaunan</option>
         <option value="organik">Sisa Sayur dan Buah</option>
